@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-01-03
+	Added: Configuration for maximum component load time (default 120s). No UI configuration yet.
 ### 2019-12-22
 	Fixed: SynchronizationLockException due to using thread locking when it made no sense.
 ### 2019-12-19
